9 Dec 2010
	* moved all printf to DPRINTF, print only when DEBUG set in Makefile, added -O3 optimize
	* added stubs for FLTK 1.3: XIMOfIC, XLocaleOfIM (Johannes)
	* added patch for buffered fonts and static fontlist (nxlib.h: HAVE_STATICFONTS) (Johannes)
	* rewrote font searching code heavily, works with XLFD, partial paths, aliases, ttf fonts
		font directory list must be specified in fontlist.c (default Ubuntu desktop)
		fonts.alias file is now used (sample in fonts/fonts.alias)
7 Dec 2010
	* remove GrOffsetRegion in XSetClipOrigin, already done in GsPrepareDrawing
	    this fixes FLTK 1.10 pixmap test program (requires nano-X GrNewRegionFromPixmap fix also)
	* replace MWPF_TRUECOLOR0888 with TRUECOLOR8888
	* cleaned up Makefile, default no version numbering on .so lib names
17 May 2010 - Version 0.46
	* fix prefix problem in XLoadFont when full filename (not XLFD) passed
10 Apr 2010
	* fix XSetClipOrigin to offset current gc clip region also (REMOVED 12/7/2010!)
	* load linux kernel keymap when XRefreshKeyboardMapping called (Aron Takacs)
21 Mar 2010
	* fix multiple free() bug in _nxFreeFontDir()
	* added Xutf8SetWMProperties for mupdf port
	* added XShmQueryExtension, XShmAttach, XShmCreateImage stubs
9 Mar 2010
	* added image padding in XGetImage and XPutImage (Johannes)
	* added WM_DELETE_WINDOW handling on GR_EVENT_TYPE_CLOSE_REQ for FLTK
	* add XSetTransientForHint(), XA_WM_TRANSIENT_FOR and XM_WM_NAME handling
		in XChangeProperty (Johannes)
	* fix null ptr in XConvertSelection (Johannes)
21 Feb 2010
	* fixes relating to running FLTK 1.1.10 w/NXLIB (requires mwin v0.92RC2)
	* XParseColor randomly returned incorrect colors, now works #RRRRGGGGBBBB
	* fix bug in drawing text bk color after drawing Images
	* revised default Makefile for Ubuntu 9.10 X11 fonts location
	* added fonts.alias support
24 Jan 2010 - greg@censoft.com
	* revised Makefile to allow compiling without X11 installed
	* created internal X11 directory for X11 hdrs if not present